test/files/neg/variant-placeholders-future.check
variant-placeholders-future.scala:2: error: `=`, `>:`, or `<:` expected
  type -_ = Int // error -_ not allowed as a type def name without backticks
        ^
variant-placeholders-future.scala:3: error: `=`, `>:`, or `<:` expected
  type +_ = Int // error +_ not allowed as a type def name without backticks
        ^
2 errors
